updated env file and cleaned out unused data csv

--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   - blas=1.0=mkl
   - ca-certificates=2019.1.23=0
-  - certifi=2018.11.29=py36_0
+  - certifi=2019.3.9=py36_0
   - cycler=0.10.0=py36h009560c_0
   - freetype=2.9.1=ha9979f8_1
   - icc_rt=2019.0.0=h0cc432a_1
@@ -20,6 +20,7 @@ dependencies:
   - numpy=1.16.2=py36h19fb1c0_0
   - numpy-base=1.16.2=py36hc3f5095_0
   - openssl=1.1.1b=he774522_1
+  - pandas=0.24.2=py36ha925a31_0
   - pip=19.0.3=py36_0
   - pyparsing=2.3.1=py36_0
   - pyqt=5.9.2=py36h6538335_2
